Fixed AC_CHECK_LIB to use -lm instead of just m.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@75 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/configure.in
+++ b/geotiff/libgeotiff/configure.in
@@ -28,7 +28,7 @@ if test "$TIFF_HOME" != "" ; then
 else
   AC_CHECK_LIB(tiff,TIFFOpen,,
                AC_MSG_ERROR([You will need to substantially rewrite libxtiff to
-build libgeotiff without libtiff]),m)
+build libgeotiff without libtiff]),-lm)
   AC_CHECK_HEADERS(tiffiop.h,,AC_MSG_ERROR("tiffiop.h not found - cannot build libxtiff"))
 fi
 
