--- a/geotiff/libgeotiff/bin/Makefile.in
+++ b/geotiff/libgeotiff/bin/Makefile.in
@@ -3,25 +3,17 @@
 #
 DEPTH	= ..
 
-GEOTIFFDIR	= ${DEPTH}/@SRCDIR@
+GEOTIFFDIR	= ${DEPTH}
 
-TOP = ${DEPTH}/@DIR_LIBTIFF@
-TIFFDIR = ${TOP}/libtiff
-PORT    = ${TOP}/port
-LIBPORT = @LIBPORT@
+LIBS=   -L${GEOTIFFDIR} -lgeotiff @LIBS@
 
-#
-# VERSION:	@VERSION@
-# DATE:		@DATE@
-# TARGET:	@TARGET@
-# CCOMPILER:	@CCOMPILER@
 #
 SHELL	= /bin/sh
 NULL	=
-CC	= @CCOMPILER@
-AR	= @AR@
-LN	= @LN@
-AROPTS	= @AROPTS@
+CC	= @CC@
+AR	= ar
+LN	= @LN_S@
+AROPTS	= r
 RANLIB	= @RANLIB@
 INSTALL	= @INSTALL@
 
@@ -30,11 +22,9 @@ PROGS=${BIN}/makegeo ${BIN}/listgeo ${BIN}/geotifcp
 #
 IPATH	= -I. -I${TOP} -I${GEOTIFFDIR}  -I${TIFFDIR}
 #
-CONF_LIBRARY=\
-	${NULL}
-COPTS	= @GCOPTS@
-OPTIMIZER=-O
-CFLAGS	= @ENVOPTS@ ${COPTS} ${OPTIMIZER} ${IPATH} ${CONF_LIBRARY}
+
+COPTS	= @CFLAGS@
+CFLAGS  = ${COPTS} ${IPATH}
 #
 SRCS	= \
 	${NULL}
@@ -43,8 +33,6 @@ OBJS	= \
 	listgeo.o \
 	geotifcp.o \
 	${NULL}
-
-LIBS=   -L${GEOTIFFDIR} -L${TIFFDIR} -L${PORT}  -lgeotiff -ltiff ${LIBPORT}
 
 ALL=	makegeo listgeo geotifcp
 
