Include @TIFF_INC@ in include path, but not -I$TOP
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@80 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/bin/Makefile.in
+++ b/geotiff/libgeotiff/bin/Makefile.in
@@ -20,7 +20,7 @@ INSTALL	= @INSTALL@
 PROGS=${BIN}/makegeo ${BIN}/listgeo ${BIN}/geotifcp
 
 #
-IPATH	= -I. -I${TOP} -I${GEOTIFFDIR}  -I${TIFFDIR}
+IPATH	= -I. -I${GEOTIFFDIR} @TIFF_INC@
 #
 
 COPTS	= @CFLAGS@
