added proj.4 support
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@132 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/Makefile.in
+++ b/geotiff/libgeotiff/Makefile.in
@@ -24,7 +24,7 @@ XTIFF=xtiff.o
 XTIFFINC= xtiffio.h xtiffiop.h
 
 #
-IPATH   = -I. -I${SRCDIR} @TIFF_INC@
+IPATH   = -I. -I${SRCDIR} @TIFF_INC@ @PROJ_INC@
 #
 CONF_LIBRARY=\
 	${NULL}
@@ -44,6 +44,7 @@ OBJS    = \
 	geo_tiffp.o \
 	geo_write.o \
 	geo_normalize.o \
+	geotiff_proj4.o \
 	cpl_csv.o \
 	cpl_serv.o \
 	${NULL}
