added new files
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@168 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/makefile.vc
+++ b/geotiff/libgeotiff/makefile.vc
@@ -23,6 +23,8 @@ OBJS    = \
 	geo_set.obj \
 	geo_tiffp.obj \
 	geo_write.obj \
+	geo_extra.obj \
+	geo_trans.obj \
 	geo_normalize.obj \
 	cpl_csv.obj \
 	cpl_serv.obj
@@ -78,6 +80,12 @@ geo_tiffp.obj: geo_tiffp.c
 
 geo_write.obj: geo_write.c
 	$(CC) -c $(CFLAGS) geo_write.c
+
+geo_trans.obj: geo_trans.c
+	$(CC) -c $(CFLAGS) geo_trans.c
+
+geo_extra.obj: geo_extra.c
+	$(CC) -c $(CFLAGS) geo_extra.c
 
 geo_normalize.obj: geo_normalize.c
 	$(CC) -c $(CFLAGS) geo_normalize.c
