Made to look for ../../libtiff/libtiff in case someone is getting libtiff from the remotesensing.org cvs archive.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@201 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/configure.in
+++ b/geotiff/libgeotiff/configure.in
@@ -25,6 +25,9 @@ dnl (tiffiop.h) are not installed with the public interface.
 dnl
 if test "$TIFF_HOME" != "" ; then
   echo Using predefined TIFF_HOME=$TIFF_HOME
+elif test -d ../../libtiff/libtiff ; then
+  TIFF_HOME=`pwd`/../../libtiff/libtiff
+  echo Found local TIFF_HOME=$TIFF_HOME
 elif test -d ../libtiff ; then
   TIFF_HOME=`pwd`/../libtiff
   echo Found local TIFF_HOME=$TIFF_HOME
