--- a/geotiff/libgeotiff/Makefile.in
+++ b/geotiff/libgeotiff/Makefile.in
@@ -33,7 +33,7 @@ CFLAGS  = ${COPTS} ${IPATH} ${CONF_LIBRARY}
 #
 SRCS    = \
 	${NULL}
-OBJS    = \
+CORE_OBJS    = \
 	${XTIFF} \
 	geo_free.o \
 	geo_get.o \
@@ -47,9 +47,38 @@ OBJS    = \
 	geo_normalize.o \
 	geotiff_proj4.o \
 	geo_extra.o \
-	cpl_csv.o \
 	cpl_serv.o \
 	${NULL}
+
+CSV_INCODE_OBJS = \
+	cpl_csv_incode.o \
+	csv/compd_cs.o \
+	csv/ellips_alias.o \
+	csv/ellipsoid.o \
+	csv/gdatum_alias.o \
+	csv/geod_datum.o \
+	csv/geod_trf.o \
+	csv/geoparms.o \
+	csv/horiz_cs.o \
+	csv/p_meridian.o \
+	csv/trf_nonpolynomial.o \
+	csv/trf_path.o \
+	csv/uom_an_alias.o \
+	csv/uom_angle.o \
+	csv/uom_le_alias.o \
+	csv/uom_length.o \
+	csv/uom_sc_alias.o \
+	csv/uom_scale.o \
+	csv/vert_cs.o \
+	csv/vert_datum.o \
+	csv/vert_offset.o
+
+CSV_FILE_OBJS = \
+	cpl_csv.o
+
+# @CSV_SOURCE@ can be either $(CSV_FILE_OBJS) or $(CSV_INCODE_OBJS)
+OBJS  =	$(CORE_OBJS) @CSV_SOURCE@
+
 TARGETS = libgeotiff.a
 
 all:    Makefile ${TARGETS} Progs
@@ -112,6 +141,9 @@ cpl_serv.o: ${SRCDIR}/cpl_serv.c
 
 geotiff_proj4.o: ${SRCDIR}/geotiff_proj4.c
 	${CC} -c ${CFLAGS} ${SRCDIR}/geotiff_proj4.c
+
+${SRCDIR}/csv/%.o:	${SRCDIR}/csv/%.c
+	${CC} -c ${CFLAGS} ${SRCDIR}/csv/$*.c -o ${SRCDIR}/csv/$*.o
 
 clean:
 	rm -f ${TARGETS} ${OBJS} ${XTIFFINC} core a.out
