--- a/geotiff/libgeotiff/configure.in
+++ b/geotiff/libgeotiff/configure.in
@@ -71,4 +71,22 @@ else
   AC_CHECK_HEADERS(projects.h,,)
 fi
 
+dnl
+dnl Has the user requested "incode" EPSG tables, overriding the
+dnl default use of EPSG tables in csv files?
+dnl
+
+AC_ARG_ENABLE(incode-epsg, [  --enable-incode-epsg	  Use C code EPSG tables],, enable_incode_epsg=no)
+
+if test "$enable_incode_epsg" != "yes" ; then
+  echo "EPSG tables will be read from .csv files."
+  CSV_SOURCE="\$(CSV_FILE_OBJS)"
+else
+  echo "EPSG tables will be linked into library."
+  CSV_SOURCE="\$(CSV_INCODE_OBJS)"
+fi
+AC_SUBST(CSV_SOURCE,$CSV_SOURCE)
+
+
+
 AC_OUTPUT(Makefile bin/Makefile)
