--- a/geotiff/libgeotiff/bin/Makefile.in
+++ b/geotiff/libgeotiff/bin/Makefile.in
@@ -20,7 +20,7 @@ INSTALL	= @INSTALL@
 PROGS=${BIN}/makegeo ${BIN}/listgeo ${BIN}/geotifcp
 
 #
-IPATH	= -I. -I${GEOTIFFDIR} @TIFF_INC@
+IPATH	= -I. -I${GEOTIFFDIR} @TIFF_INC@ @ZIP_INC@
 #
 
 COPTS	= @CFLAGS@
