--- a/geotiff/libgeotiff/configure.in
+++ b/geotiff/libgeotiff/configure.in
@@ -10,6 +10,13 @@ AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_RANLIB
 
+#
+# We always want to check /usr/local for stuff, since things like libproj
+# are often there. 
+LIBS="$LIBS -L/usr/local/lib"
+CFLAGS="$CFLAGS -I/usr/local/include"
+CPPFLAGS="$CPPFLAGS -I/usr/local/include"
+
 dnl Checks for libraries.
 AC_CHECK_LIB(m,exp,,,)
 
@@ -83,22 +90,46 @@ fi
 dnl
 dnl Try and find libproj.a, and projects.h
 dnl
-if test "$PROJ_HOME" != "" ; then
-  echo Using predefined PROJ_HOME=$PROJ_HOME
-elif test -d ../../proj/src ; then
-  PROJ_HOME=`pwd`/../../proj/src
-  echo Found local PROJ_HOME=$PROJ_HOME
+
+AC_ARG_WITH(proj, [  --with-proj[=ARG]       Use PROJ.4 library (ARG=no or path)],[PROJ_HOME=$withval],[PROJ_HOME=yes])
+
+if test "$PROJ_HOME" != "" -a "$PROJ_HOME" != "no" ; then
+  if test -d $PROJ_HOME/src ; then
+    PROJ_HOME=$PROJ_HOME/src
+  fi
+
+  dnl Old PROJ.4 build tree, without automake
+  if test -f $PROJ_HOME/libproj.a -a -f $PROJ_HOME/projects.h ; then
+    PROJ_LIB=$PROJ_HOME/libproj.a
+    PROJ_INC=$PROJ_HOME
+
+  dnl New PROJ.4 build tree, with automake
+  elif test -f $PROJ_HOME/.libs/libproj.a -a -f $PROJ_HOME/projects.h ; then
+    PROJ_LIB=$PROJ_HOME/.libs/libproj.a
+    PROJ_INC=$PROJ_HOME
+
+  dnl Installed tree in an odd place
+  elif test -f $PROJ_HOME/lib/libproj.a -a -f $PROJ_HOME/include/projects.h ; then
+    PROJ_LIB=$PROJ_HOME/lib/libproj.a
+    PROJ_INC=$PROJ_HOME/include 
+  else
+    echo "PROJ_HOME=$PROJ_HOME, but either projects.h or libproj.a not found!"
+  fi
 fi
 
-if test "$PROJ_HOME" != "" ; then
-  PROJ_LIB=$PROJ_HOME/libproj.a
-  LIBS="$PROJ_LIB $LIBS"
+if test "$PROJ_HOME" = "no" ; then
+  echo "PROJ.4 support disabled."
 
-  PROJ_INC=-I$PROJ_HOME
+elif test "$PROJ_LIB" != "" -a "$PROJ_INC" != "" ; then
+  echo "Found $PROJ_LIB"
+  echo "Found $PROJ_INC/projects.h"
+
+  LIBS="$PROJ_LIB $LIBS"
+  PROJ_INC=-I$PROJ_INC
+
   AC_SUBST(PROJ_INC,$PROJ_INC)
   AC_DEFINE(HAVE_PROJECTS_H)
   AC_DEFINE(HAVE_LIBPROJ)
-  
 else
   AC_CHECK_LIB(proj,pj_init,,,-lm)
   AC_CHECK_HEADERS(projects.h,,)
