try to use proj and tiff shared libraries
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@326 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/configure.in
+++ b/geotiff/libgeotiff/configure.in
@@ -86,7 +86,7 @@ dnl
 AC_ARG_WITH(libtiff, [  --with-libtiff=dir      Use libtiff in directory dir],,)
 
 if test "$with_libtiff" != "" ; then
-  TIFF_LIB=$TIFF_HOME/libtiff.a
+  TIFF_LIB="-L$TIFF_HOME -ltiff"
   LIBS="-L$with_libtiff -ltiff $LIBS"
 
   TIFF_INC=-I$with_libtiff
@@ -130,7 +130,7 @@ if test "$PROJ_HOME" != "" -a "$PROJ_HOME" != "no" ; then
 
   dnl Installed tree in an odd place
   elif test -f $PROJ_HOME/lib/libproj.a -a -f $PROJ_HOME/include/projects.h ; then
-    PROJ_LIB=$PROJ_HOME/lib/libproj.a
+    PROJ_LIB="-L$PROJ_HOME/lib -lproj"
     PROJ_INC=$PROJ_HOME/include 
   else
     echo "PROJ_HOME=$PROJ_HOME, but either projects.h or libproj.a not found!"
