reconfigured documentation a bit
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@378 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/Makefile.in
+++ b/geotiff/libgeotiff/Makefile.in
@@ -189,6 +189,10 @@ Makefile:	Makefile.in config.status
 
 dox:
 	doxygen
+	if test -d ../../geotiff-ht/api ; then \
+	  cp docs/api/*.* ../../geotiff-ht/api; \
+	  cp docs/*.html ../../geotiff-ht; \
+	fi
 
 configure:	configure.in aclocal.m4
 	autoconf
