clean in bin dir too
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@410 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/Makefile.in
+++ b/geotiff/libgeotiff/Makefile.in
@@ -171,6 +171,7 @@ ${SRCDIR}/csv/%.o:	${SRCDIR}/csv/%.c
 	${CC} -c ${CFLAGS} ${SRCDIR}/csv/$*.c -o ${SRCDIR}/csv/$*.o
 
 clean:
+	(cd bin; $(MAKE) clean)
 	rm -f ${TARGETS} ${OBJS} ${XTIFFINC} core a.out libgeotiff.so*
 
 dist-clean: clean
