Fixed --with-jpeg support to avoid mixup with zip in AC_ARG_WITH() call.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@420 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/configure.in
+++ b/geotiff/libgeotiff/configure.in
@@ -65,7 +65,7 @@ fi
 dnl
 dnl Add option to include libjpeg in library list for use of libtiff.
 dnl
-AC_ARG_WITH(zip, [  --with-jpeg=dir         Use JPEG library in directory dir],[JPEG=$withval],[JPEG=yes])
+AC_ARG_WITH(jpeg, [  --with-jpeg=dir         Use JPEG library in directory dir],[JPEG=$withval],[JPEG=yes])
 if test "$JPEG" = "yes" ; then
   AC_CHECK_LIB(jpeg,jinit_compress_master,,,-lm)
   AC_DEFINE(HAVE_JPEG)
