--- a/geotiff/libgeotiff/Makefile.in
+++ b/geotiff/libgeotiff/Makefile.in
@@ -42,7 +42,7 @@ LD_SHARED=@LD_SHARED@
 
 GT_INCLUDE_FILES = xtiffio.h geotiff.h geotiffio.h geovalues.h \
 	geonames.h geokeys.h geo_tiffp.h geo_config.h geo_keyp.h \
-	geo_normalize.h cpl_serv.h cpl_csv.h \
+	geo_normalize.h cpl_serv.h \
 	epsg_datum.inc epsg_gcs.inc epsg_pm.inc epsg_units.inc geo_ctrans.inc\
 	epsg_ellipse.inc epsg_pcs.inc epsg_proj.inc epsg_vertcs.inc geokeys.inc
 
