Added dist-clean target in bin/Makefile.in
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@508 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/Makefile.in
+++ b/geotiff/libgeotiff/Makefile.in
@@ -179,7 +179,7 @@ clean:
 	rm -f ${GEOTIFF_IMP} ${GEOTIFF_SO}
 
 dist-clean: clean
-	(cd bin; $(MAKE) clean)
+	(cd bin; $(MAKE) dist-clean)
 	rm -rf config.log config.status config.cache geo_config.h
 	rm -f Makefile
 
